<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title_activity_main">My App Portfolio</string>

    <!-- splash screen strings -->
    <string name="my_app">My Nanodegree Apps!</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="score_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_app">Build It Bigger</string>
    <string name="reader_app">XYZ Reader</string>
    <string name="capstone_app">Capstone: My Own App</string>
</resources>
