<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:id="@+id/heading_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/my_app"
            android:textSize="@dimen/app_title_size"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/splash_screen_layout_margin">


            <Button
                android:id="@+id/spotify_button"
                style="@style/splash_activity_button_style"
                android:text="@string/spotify_app"/>

            <Button
                android:id="@+id/score_button"
                style="@style/splash_activity_button_style"
                android:text="@string/score_app"/>

            <Button
                android:id="@+id/library_button"
                style="@style/splash_activity_button_style"
                android:text="@string/library_app"/>

            <Button
                android:id="@+id/build_button"
                style="@style/splash_activity_button_style"
                android:text="@string/build_app"/>

            <Button
                android:id="@+id/reader_button"
                style="@style/splash_activity_button_style"
                android:text="@string/reader_app"/>

            <Button
                android:id="@+id/capstone_button"
                style="@style/splash_activity_button_style"
                android:background="@drawable/selector_special_rounded_button"
                android:text="@string/capstone_app"
                android:textColor="@color/white"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>